<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bSens_3" Id="{83d7d675-d746-449f-9940-fd618d2aaf98}">
    <Declaration><![CDATA[VAR_GLOBAL
// --------------------------------------Список датчиков--------------------------------------------//
//---------------------------------------Третий конвейер--------------------------------------------//
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 3 (EPP2339-0021) X3^Channel 1^Input'}
bSens3s01D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 3 (EPP2339-0021) X3^Channel 2^Input'}
bSens3s01D2 AT%I* :BOOL;	// Датчик в конце секции (в обратном направлении) 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 3 (EPP2339-0021) X3^Channel 3^Input'}
bSens3s01D3 AT%I* :BOOL;	// Датчик контроля вил
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 2 (EPP1004-0061) X3^Channel 1^Input'}
bSens3s02D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 2 (EPP1004-0061) X3^Channel 2^Input'}
bSens3s02D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 2 (EPP1004-0061) X3^Channel 3^Input'}
bSens3s03D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 2 (EPP1004-0061) X3^Channel 4^Input'}
bSens3s03D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 1^Input'}
bSens3s04D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 2^Input'}
bSens3s04D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 3^Input'}
bSens3s04D3 AT%I* :BOOL;	// Датчик сканирования RFID
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 4^Input'}
bSens3s05D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 5^Input'}
bSens3s05D2 AT%I* :BOOL;	// Датчик управления двойным движением
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 6^Input'}
bSens3s06D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EK1122)^Term 12 (EK1100)^Term 24 (EK1322)^Box 1 (EPP2339-0021) X3^Channel 7^Input'}
bSens3s06D2 AT%I* :BOOL;	// Датчик контроля вил

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>