<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="ConvLine3" Id="{9e837d1e-e9c5-4f0e-8777-4b415ec3ae36}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ConvLine3
VAR_INPUT
	bAutomat				:BOOL;
	bManual					:BOOL;
	bStop					:BOOL;
	bReset					:BOOL := FALSE;
	bDirect					:BOOL;
	bReverse				:BOOL;
	bBuffering				:BOOL;
END_VAR
VAR
	fbS1			:FB_ConvPlace;
	fbS2			:FB_ConvPlaceDouble;
	fbS3			:FB_ConvPlaceDouble;
	fbS4			:FB_ConvPlaceDouble;
	fbS5			:FB_ConvPlace;
	fbS6			:FB_ConvPlace;
	bMove1					:BOOL;
	bMove2					:BOOL;
	bDriveMoveS1			:BOOL;
	bDriveMoveS2			:BOOL;
	bEnableMoveToS1			:BOOL :=TRUE;
	bEnableMoveToS2			:BOOL;
	bEnableMoveToS3			:BOOL;
	bEnableMoveToS4			:BOOL;
	bEnableMoveToS5			:BOOL;
	bEnableMoveToS6			:BOOL;
	bEnableRead				:BOOL;
	bEnableWeight			:BOOL;
	fbLoadScan				:FB_LoadScan;
	fbLoadWeight			:FB_LoadWeight;
	bEnableReadyID			:BOOL;
	bEnableReadyData		:BOOL;
	ConvStatusPrev 			:BYTE;
	bSensFreePrevS1 		:BOOL;
	bSensFreePrevS5 		:BOOL;
	bSensFreePrevS6 		:BOOL;

	bCountNoRead_ID1		:WORD;		//Кол-во несчитываний RFID
	bSetVal_ID1				:WORD :=10;	//Заданное значение счетчика (максимально допустимое для несчитываний)
	bResetCTU_ID1			:BOOL;		//Сброс счетчика несчитываний
	
	bCountNoRead_Weight1	:WORD;		//Кол-во несчитываний RFID
	bSetVal_Weight1			:WORD :=10;	//Заданное значение счетчика (максимально допустимое для несчитываний)
	bResetCTU_Weight1		:BOOL;		//Сброс счетчика несчитываний
	
	fbLoadDataToWMS: FB_LoadDataToWMS;
	
	bEnableMove3_2:BOOL;
	bEnableMove3_3:BOOL;
	bEnableMove3_4:BOOL;
	
	fbDelayEnableMove3_2:TON;
	fbDelayEnableMove3_3:TON;
	fbDelayEnableMove3_4:TON;
	
	
	fbFallMove1:F_TRIG;
	fbFallMove2:F_TRIG;
	bLineFree:BOOL;
	fbFreeS6:R_TRIG;
END_VAR
VAR PERSISTENT
	iCounterPallets:INT;
END_VAR


]]></Declaration>
    <Implementation>
      <ST><![CDATA[


fbS1 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset,tBusy:=T#6S, bFirstPlace:=TRUE,
       	bDriveMove:=fbS2.bDrivePrev, bSens1:=bSens3s01D2, bSens2:=bSens3s01D1, bDirect:=bDirect	,bReverse:=bReverse,
       	bSensFork:= bSens3s01D3, bButtConv:= bButt3s01,bButtConvRev:=bButt3s01Rev,
	  	bMove:=bMove1,ConvStatusPrev:=ConvStatusPrev, bEnableMove := bEnableMoveToS1, bSensFreePrev := bSensFreePrevS1);
	  
		bSensFreePrevS1 := fbS1.ConvStatus = 0;
	  	bEnableMoveToS2:= NOT bMove3s02_2_s03_1 AND NOT bMove3s02_s03;
	  
		bLineFree:= fbS3.ConvStatus1=0 AND fbS3.ConvStatus2=0 AND 
      fbS4.ConvStatus1=0 AND fbS4.ConvStatus2=0 AND NOT (bMove3s02_2_s03_1 OR bMove3s02_s03 OR bMove3s03_1_s03_2
      OR bMove3s03_2_s04_1 OR bMove3s03_s04 OR bMove3s04_1_s04_2  OR bMove3s05_s06 OR bMove3s04_2_s05);	 
	  
 IF bLineFree AND fbS6.ConvStatus=0 AND fbS5.ConvStatus=0 THEN
	 iCounterPallets:=0;
 END_IF
	  
		fbFallMove1(CLK:=bMove3s02_2_s03_1);
IF fbFallMove1.Q THEN	
iCounterPallets:=iCounterPallets +1;
END_IF	
	   fbFallMove2(CLK:=bMove3s02_s03);
IF 	fbFallMove2.Q   THEN
	iCounterPallets:=iCounterPallets +2;
END_IF



		fbFreeS6(CLK:=fbS6.ConvStatus=0);
IF fbFreeS6.Q AND iCounterPallets>0 THEN
iCounterPallets:=iCounterPallets -1;	
END_IF

		
		bEnableMove3_2 := (*(fbS6.ConvStatus=0 OR fbS5.ConvStatus=0) AND bLineFree OR *)iCounterPallets<2;
	//  fbDelayEnableMove3_2(IN:=bEnableMove3_2, PT:=T#0.3S);
		
	  
	
	
	  
fbS2 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:=bEnableMoveToS2,bBuffering:=bBuffering,
        bDriveMove:=fbS3.bDrivePrev, bSens1:=bSens3s02D2, bSens2:=bSens3s02D1,bSensFork:= bSens3s01D3, ConvStatusPrev1:=0,
        ConvStatusPrev2:=fbS1.ConvStatus, bButtConv:= bButt3s02, bButtConvRev:=bButt3s02Rev, bButtMove:=bButt3s01_s02,
         bDirect:=bDirect	,bReverse:=bReverse,   ConvStatusNext1:= fbS3.ConvStatus1, ConvStatusNext2:= fbS3.ConvStatus2,
		 bEnableMove3:=bEnableMove3_2(*fbDelayEnableMove3_2.Q*), bEnableMove2:= iCounterPallets>1,  //bSensFreePrev2:=fbS1.bSensFree,
	    bMove1:=bMove3s01_s02_1, bMove2:=bMove2, bMove3:=bMove3s02_1_s02_2, 
        bLongMove1=> bLongMove3s01_s02_1,bLongMove3=> bLongMove3s02_1_s02_2  );

	    bEnableMoveToS3:= NOT bMove3s03_2_s04_1 AND NOT bMove3s03_s04 AND NOT bMove3s01_s02_1 AND NOT bMove3s02_1_s02_2;
 
		
		bEnableMove3_3 := (fbS6.ConvStatus=0 OR fbS5.ConvStatus=0) AND fbS4.ConvStatus1=0 AND fbS4.ConvStatus2=0 
       AND NOT (bMove3s03_2_s04_1 OR bMove3s03_s04 OR bMove3s04_1_s04_2 OR bMove3s05_s06 OR bMove3s04_2_s05);
		  fbDelayEnableMove3_3(IN:=bEnableMove3_3, PT:=T#0.3S);
		  
fbS3 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:=bEnableMoveToS3,bBuffering:=bBuffering,
        bDriveMove:=fbS4.bDrivePrev, bSens1:=bSens3s03D2, bSens2:=bSens3s03D1,ConvStatusPrev1:=fbS2.ConvStatus1,
        ConvStatusPrev2:=fbS2.ConvStatus2, bButtConv:= bButt3s03, bButtConvRev:=bButt3s03Rev, bButtMove:=bButt3s02_s03, 
		 bDirect:=bDirect	,bReverse:=bReverse,   ConvStatusNext1:= fbS4.ConvStatus1, ConvStatusNext2:= fbS4.ConvStatus2,
		 bEnableMove3:=fbDelayEnableMove3_3.Q,  bEnableMove2:= TRUE,  //bSensFreePrev1:=fbS2.bSensFree1, bSensFreePrev2:=fbS2.bSensFree2,
	    bMove1:=bMove3s02_2_s03_1, bMove2:=bMove3s02_s03, bMove3:=bMove3s03_1_s03_2, 
        bLongMove1=> bLongMove3s02_2_s03_1,bLongMove2=>bLongMove3s02_s03, bLongMove3=> bLongMove3s03_1_s03_2 );	  
	  
	    bEnableMoveToS4:= NOT bMove3s04_2_s05 AND NOT bMove3s02_2_s03_1 AND NOT bMove3s03_1_s03_2;
 
		
		
		bEnableMove3_4 := fbS6.ConvStatus=0 OR fbS5.ConvStatus=0 AND NOT (bMove3s05_s06 OR bMove3s04_2_s05);
		fbDelayEnableMove3_4(IN:=bEnableMove3_4, PT:=T#0.3S);
		
fbS4 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:=bEnableMoveToS4,bBuffering:=bBuffering,
        bDriveMove:=fbS5.bDrivePrev AND bSens3s05D2, bSens1:=bSens3s04D2, bSens2:=bSens3s04D1,ConvStatusPrev1:=fbS3.ConvStatus1,
        ConvStatusPrev2:=fbS3.ConvStatus2, bButtConv:= bButt3s04, bButtConvRev:=bButt3s04Rev, bButtMove:=bButt3s03_s04,
         bDirect:=bDirect	,bReverse:=bReverse,   ConvStatusNext1:= fbS5.ConvStatus,
		 bEnableMove3:=fbDelayEnableMove3_4.Q,  bEnableMove2:= TRUE, // bSensFreePrev1:=fbS3.bSensFree1, bSensFreePrev2:=fbS3.bSensFree2,
	    bMove1:=bMove3s03_2_s04_1, bMove2:=bMove3s03_s04, bMove3:=bMove3s04_1_s04_2, 
         bLongMove1=>bLongMove3s03_2_s04_1,bLongMove2=>bLongMove3s03_s04, bLongMove3=> bLongMove3s04_1_s04_2  );	  
	
  		
		bEnableRead := NOT bMove3s05_s06 AND NOT bMove3s03_2_s04_1 AND NOT bMove3s04_1_s04_2 AND NOT bMove3s03_s04 ;
		
fbLoadScan (bAutomat:=bAutomat,bEnable:=bEnableRead, iConvStatus:=fbS4.ConvStatus2, 
        sInID:=sScanID_1, stLoad:=stLoadS4_1, bReadScan:=bReadScan_1, 
        bRequestID=>bRequestID_1,bEnableReadyID=>bEnableReadyID, bOverflowID=>bOverflow_CTU_ID1,
		bSetVal:=bSetVal_ID1, bResetCTU:=bResetCTU_ID1, bCountNoRead=>bCountNoRead_ID1);		 
		
						
	    bEnableMoveToS5:= NOT bMove3s05_s06 AND NOT bMove3s03_2_s04_1 AND NOT bMove3s04_1_s04_2  AND bEnableReadyID;
	  
fbS5 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:= bEnableMoveToS5,
        bDriveMove:=fbS6.bDrivePrev, bSens1:=bSens3s05D2, bSens2:=bSens3s05D1, bStopSecPlace:=TRUE,
        bButtConv:= bButt3s05,bButtConvRev:=bButt3s05Rev, ConvStatusPrev := fbS4.ConvStatus2,
		 bDirect:=bDirect	,bReverse:=bReverse,
		bSensFreePrev:= bSens3s04D1, bMove:=bMove3s04_2_s05,bLongMove=>bLongMove3s04_2_s05, );  
	  	
	
		bEnableWeight := NOT bMove3s04_2_s05 AND NOT bMove3s05_s06 ;
		
fbLoadWeight (bAutomat:=bAutomat,bEnable:=bEnableWeight,bMove:=bMove3s04_2_s05, iConvStatus:=fbS5.ConvStatus, stLoadIn:=stLoadS4_1,
        (*sInWeight:=sWeight_1*)rInWeight:= Massa_1_Gramms   ,  stLoad:=stLoadS5_1, stLoadMove:=stLoadS4_5_1, 
        (*bRequestWeight=>bRequestWeight_1,*) bEnableReadyData=>bEnableReadyData, bOverflowWeight=>bOverflow_CTU_Weight1,
		  bCountNoReadWeight=>bCountNoRead_Weight1, bSetValWeight:=bSetVal_Weight1, bResetCTUWeight:=bResetCTU_Weight1);	
		
			
	    bEnableMoveToS6:= NOT bMove3s04_2_s05   AND bEnableReadyData ;
	  
fbS6 ( bAutomat:=bAutomat, bManual:=bManual,bStop:=bStop,bReset:=bReset, bEnableMove:= bEnableMoveToS6,
        bSens1:=TRUE, bSens2:=bSens3s06D1, (*bSensFork:= bSens3s06D2, *)bButtConv:= bButt3s06, bButtConvRev:=bButt3s06Rev,
		 bDirect:=bDirect	,bReverse:=bReverse,bLastPlace:=TRUE,bLongMove=>bLongMove3s05_1s06,
	    bMove:=bMove3s05_s06,ConvStatusPrev := fbS5.ConvStatus,bSensFreePrev := bSensFreePrevS6);  
		
		bSensFreePrevS6 := fbS6.ConvStatus = 0;
		
		
fbLoadDataToWMS(bAutomat:=bAutomat,stLoadIn:=stLoadS5_1, bEnable:=NOT bMove3s05_s06, 
iConvStatus:=fbS6.ConvStatus, bMove	:=bMove3s05_s06, stLoadMove:=  stLoadS5_6_1, stLoad:=stLoadS6_1,
sMessageOut=>sMessageOut1, bMessageReady:=bMessageReady1	);		
		
		
	  
bDrive3s01M1    := fbS1.bDrive 		AND bDirect ;
bDrive3s01M1Rev := fbS1.bDriveRev 		AND bReverse AND bSens3s01D2;
bDrive3s02M1    := fbS2.bDrive 		AND bDirect ;
bDrive3s02M1Rev := fbS2.bDriveReverse 	AND bReverse;
bDrive3s03M1    := fbS3.bDrive 		AND bDirect ;
bDrive3s03M1Rev := fbS3.bDriveReverse 	AND bReverse;
bDrive3s04M1    := fbS4.bDrive 		AND bDirect ;
bDrive3s04M1Rev := fbS4.bDriveReverse 	AND bReverse;  
bDrive3s05M1    := fbS5.bDrive 		AND bDirect ;
bDrive3s05M1Rev := fbS5.bDriveRev 		AND bReverse;
bDrive3s06M1    := fbS6.bDrive 		AND bDirect AND bSens3s06D1;
bDrive3s06M1Rev := fbS6.bDriveRev 		AND bReverse;  
	  
]]></ST>
    </Implementation>
    <LineIds Name="ConvLine3">
      <LineId Id="525" Count="135" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>